--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
       .top-footer li > a:hover {
         border-bottom: 2px solid skyblue;
       }
+
+      .working {
+        margin-top: 50px;
+      }
+      .comparing {
+        margin-top: 30px;
+      }
+
+      .working div {
+        margin: auto !important;
+      }
+      .comparing div {
+        margin: auto !important;
+      }
+
+      .comparingRow img {
+        width: 90px;
+      }
     </style>
   </head>
   <body>
@@ -194,15 +212,153 @@
         </div>
       </section>
 
-      <section class="working">
-        <h2 class="text-center mb-4">How PolicyBachat works</h2>
-        <div class="row m-0">
+      <section class="companies my-2 container-lg">
+        <h3 class="fw-bold text-center py-3">
+          We work with 40+ top insurance companies
+        </h3>
+        <div
+          class="row m-0 flex-wrap justify-content-center align-items-center"
+        >
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/digit-1.webp"
+              alt=""
+              class="img-fluid my-auto"
+            />
+          </div>
+
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/bajaj-alianz.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+
+          <div class="col-2 col-lg-1 card m-2">
+            <img src="/policy_media/hdfc-ergo.webp" alt="" class="img-fluid" />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/tata-aia-logo.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/future-generali.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img src="/policy_media/icici.webp" alt="" class="img-fluid" />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/sbi-life-logo.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/digit-1.webp"
+              alt=""
+              class="img-fluid my-auto"
+            />
+          </div>
+
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/bajaj-alianz.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+
+          <div class="col-2 col-lg-1 card m-2">
+            <img src="/policy_media/hdfc-ergo.webp" alt="" class="img-fluid" />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/tata-aia-logo.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/future-generali.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img src="/policy_media/icici.webp" alt="" class="img-fluid" />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/sbi-life-logo.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-2 col-lg-1 card m-2">
+            <img
+              src="/policy_media/kotak-general-insurance.webp"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="working bg-light">
+        <h2 class="text-center mb-4 p-4 fw-bold">How PolicyBachat works</h2>
+        <div class="row m-0 container">
           <div
             class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center"
           >
             <img src="/policy_media/compare.webp" alt="" />
-            <h3>Compare</h3>
-            <p class="ms-sm-4">
+            <h3 class="p-3">Compare</h3>
+            <p class="ms-sm-4 mb-5 text-center">
               Answer a few questions, we'll provide accurate live quotes with a
               side-by-side comparison from top insurance companies.
             </p>
@@ -211,8 +367,8 @@
             class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center"
           >
             <img src="/policy_media/pick.webp" alt="" />
-            <h3>Pick</h3>
-            <p class="ms-sm-4">
+            <h3 class="p-3">Pick</h3>
+            <p class="ms-sm-4 mb-5 text-center">
               Shop smart and Save by picking the insurer that will provide you
               with the most discounts.
             </p>
@@ -221,8 +377,8 @@
             class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center p-0"
           >
             <img src="/policy_media/buy.webp" alt="" />
-            <h3>Compare</h3>
-            <p class="ms-sm-4">
+            <h3 class="p-3">Buy Online</h3>
+            <p class="ms-sm-4 mb-5 text-center">
               Get the policy you want the way you want it or schedule a call
               with an agent. Buy online and save money.
             </p>
@@ -230,7 +386,129 @@
         </div>
       </section>
 
-      <article class="bg-light">
+      <section class="comparing">
+        <h2 class="text-center mb-4 p-4 fw-bold">
+          The benefits of comparing with PolicyBachat
+        </h2>
+        <div class="comparingRow row m-0 container">
+          <div
+            class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center"
+          >
+            <img class="img-fluid" src="/policy_media/piggy-bank.svg" alt="" />
+            <h3 class="p-3">Save Money</h3>
+            <p class="ms-sm-4 mb-5 text-center">
+              Get a side-by-side comparison from top insurance companies, so you
+              can pick the best deal.
+            </p>
+          </div>
+          <div
+            class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center"
+          >
+            <img
+              class="img-fluid"
+              src="/policy_media/passage-of-time.svg"
+              alt=""
+            />
+            <h3 class="p-3">Save Time</h3>
+            <p class="ms-sm-4 mb-5 text-center">
+              Quick and easy to compare and save time with our single entry
+              multi carrier interface.
+            </p>
+          </div>
+          <div
+            class="col-12 col-lg-4 d-flex flex-column justify-content-center align-items-center p-0"
+          >
+            <img class="img-fluid" src="/policy_media/philosophy.svg" alt="" />
+            <h3 class="p-3">Get Peace of Mind</h3>
+            <p class="ms-sm-4 mb-5 text-center">
+              Rest easy knowing that you compared top insurance companies
+              side-by-side and got the best price.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="review bg-light">
+        <div>
+          <h2 class="text-center mb-4 p-4 fw-bold">Reviews & Overall Rating</h2>
+          <p class="text-center">
+            PolicyBachat has near-perfect ratings on Google and Facebook. Here’s
+            what our customers are saying.
+          </p>
+        </div>
+
+        <a
+          href="#"
+          class="text-decoration-none text-dark text-center d-flex justify-content-center"
+          >See our 515 reviews on
+          <p class="fw-bold ms-1">Trustpilot</p></a
+        >
+
+        <figure class="d-flex justify-content-center mt-4">
+          <img
+            class="img-fluid"
+            src="/policy_media/over-all-rating.webp"
+            alt=""
+          />
+        </figure>
+
+        <div class="row m-0">
+          <div class="col-12 col-md-3 p-4">
+            <div
+              class="card p-2 d-flex flex-column shadow-sm p-3 bg-body rounded"
+            >
+              <p class="fst-italic">
+                "It's great pleasure to have policy for us... ur team member
+                renuka was good response at every time i took many excuses.. her
+                patience was gud... thank you policy bachat"
+              </p>
+
+              <span>5/5 Rating</span>
+              <h6>Manjunath Bhandari</h6>
+              <p>May 24, 2024</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 p-4">
+            <div
+              class="card p-2 d-flex flex-column shadow-sm p-3 bg-body rounded"
+            >
+              <p class="fst-italic">"Tq for support from my policy"</p>
+
+              <span>5/5 Rating</span>
+              <h6>Raju Pemmadi</h6>
+              <p>May 23, 2024</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 p-4">
+            <div
+              class="card p-2 d-flex flex-column shadow-sm p-3 bg-body rounded"
+            >
+              <p class="fst-italic">
+                "Excellent support by renuka maam and her team. thanks alot to
+                renuka maam and her team for support and cooperation. 24 × 7
+                available. i have no word to express maam support and guidance."
+              </p>
+
+              <span>5/5 Rating</span>
+              <h6>MUKESH KUMAR OJHA</h6>
+              <p>April 24, 2024</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 p-4">
+            <div
+              class="card p-2 d-flex flex-column shadow-sm p-3 bg-body rounded"
+            >
+              <p class="fst-italic">"Good and excellent"</p>
+
+              <span>5/5 Rating</span>
+              <h6>Kandukuri Sivaprasad</h6>
+              <p>April 04, 2024</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <article class="my-5">
         <h2 class="text-center p-2">Article of The Week</h2>
         <div class="d-lg-flex align-items-center">
           <figure class="col-12 col-lg-6 d-flex justify-content-center">
@@ -261,7 +539,7 @@
           <h5 class="text-center p-2 mb-3">Car Insurance</h5>
           <div class="cards row m-0 justify-content-center">
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -277,7 +555,7 @@
             </div>
 
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -292,7 +570,7 @@
               </h3>
             </div>
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -308,7 +586,7 @@
             </div>
 
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -328,7 +606,7 @@
           <h5 class="text-center p-2 mb-3">Two Wheeler Insurance</h5>
           <div class="cards row m-0 justify-content-center">
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -343,7 +621,7 @@
               </h3>
             </div>
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -358,7 +636,7 @@
               </h3>
             </div>
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
@@ -373,7 +651,7 @@
               </h3>
             </div>
             <div
-              class="col-5 col-sm-3 p-0 m-1 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
+              class="col-5 col-sm-3 p-0 m-3 border border-dark d-flex flex-column align-items-center shadow bg-body rounded"
               style="width: 310px; height: 260px"
             >
               <figure class="">
