--- a/index.html
+++ b/index.html
@@ -844,8 +844,8 @@
             </li>
           </ul>
         </div>
-        <div class="mid-footer row m-0 ms-4">
-          <div class="col-5 col-lg-4">
+        <div class="mid-footer row m-0 ms-4 justify-content-lg-center">
+          <div class="col-5 col-lg-2">
             <ul class="list-group border-0">
               <li class="list-group-item border-0 fw-bold">Company</li>
               <li class="list-group-item border-0 text-bold">About</li>
@@ -858,7 +858,7 @@
             </ul>
           </div>
 
-          <div class="col-5 col-lg-4">
+          <div class="col-5 col-lg-2">
             <ul class="list-group border-0">
               <li class="list-group-item border-0 fw-bold">Our Services</li>
               <li class="list-group-item border-0">Car Insurance</li>
@@ -868,7 +868,7 @@
               <li class="list-group-item border-0">Health Insurance Plans</li>
             </ul>
           </div>
-          <div class="col-5 col-lg-4">
+          <div class="col-5 col-lg-2 me-lg-4">
             <ul class="list-group border-0">
               <li class="list-group-item border-0 fw-bold">
                 Contact Information
@@ -888,6 +888,22 @@
                 500033, Telangana, India.
               </li>
             </ul>
+          </div>
+
+          <div class="col-12 col-lg-4">
+            <div class="video w-100">
+              <iframe
+                class="w-100 p-2"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/Q5vnxN_EZAM?si=aNEoelveulPpx3_4"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </div>
       </footer>
@@ -925,6 +941,63 @@
           <li class="p-2">Y</li>
           <li class="p-2">Z</li>
         </ul>
+      </div>
+
+      <div class="endFooter mt-4">
+        <figure class="d-flex justify-content-center">
+          <img class="img-fluid w-25" src="/policy_media/payment.webp" alt="" />
+        </figure>
+
+        <ul class="nav justify-content-center" style="font-size: 13px">
+          <li class="nav-item">
+            <a
+              class="nav-link text-dark border-end border-dark my-2"
+              aria-current="page"
+              href="#"
+              >Privacy & Security
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark border-dark border-end my-2" href="#">
+              Terms & Conditions</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark border-dark border-end my-2" href="#">
+              Shipping & Delivery Policy</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark border-dark border-end my-2" href="#"
+              >Cancellation & Refund</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark my-2" href="#"> Disclaimer</a>
+          </li>
+        </ul>
+
+        <p class="px-4 m-0 mb-1 text-center">
+          Website Approved by IRDA(Govt of India) Reg No. IRDAI/WBA30/2016 Valid
+          till: 26-04-2025 *Insurance is the subject matter of solicitation.
+          Visitors are hereby informed that their information submitted on the
+          website may be shared with insurers. The product information for
+          comparison displayed on this website is of the insurers with whom our
+          company has an agreement.Product information is authentic and solely
+          based on the information received from the Insurer.
+        </p>
+        <p class="px-4 mb-1 text-center">
+          *The information provided on this website/page is for information
+          purpose only. Policybachat does not in any form or manner endorse the
+          information so provided on the website and strives to provide factual
+          and unbiased information to customers to assist in making informed
+          insurance choices.
+        </p>
+
+        <p class="text-center m-0">
+          © 2025 Deztination Insurance Web Aggregators Pvt. Ltd. All rights
+          reserved.
+        </p>
       </div>
     </main>
   </body>
